--- a/mscore/mscore/textproperties.ui
+++ b/mscore/mscore/textproperties.ui
@@ -269,7 +269,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_left.svg</normaloff>:/data/text_left.svg</iconset>
+            <normaloff>:/data/icons-dark/text_left.svg</normaloff>:/data/icons-dark/text_left.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -292,7 +292,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_center.svg</normaloff>:/data/text_center.svg</iconset>
+            <normaloff>:/data/icons-dark/text_center.svg</normaloff>:/data/icons-dark/text_center.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -315,7 +315,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_right.svg</normaloff>:/data/text_right.svg</iconset>
+            <normaloff>:/data/icons-dark/text_right.svg</normaloff>:/data/icons-dark/text_right.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -338,7 +338,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_top.svg</normaloff>:/data/text_top.svg</iconset>
+            <normaloff>:/data/icons-dark/text_top.svg</normaloff>:/data/icons-dark/text_top.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -361,7 +361,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_vcenter.svg</normaloff>:/data/text_vcenter.svg</iconset>
+            <normaloff>:/data/icons-dark/text_vcenter.svg</normaloff>:/data/icons-dark/text_vcenter.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -384,7 +384,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_vcenter.svg</normaloff>:/data/text_vcenter.svg</iconset>
+            <normaloff>:/data/icons-dark/text_vcenter.svg</normaloff>:/data/icons-dark/text_vcenter.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -407,7 +407,7 @@
           </property>
           <property name="icon">
            <iconset resource="mscore.qrc">
-            <normaloff>:/data/text_bottom.svg</normaloff>:/data/text_bottom.svg</iconset>
+            <normaloff>:/data/icons-dark/text_bottom.svg</normaloff>:/data/icons-dark/text_bottom.svg</iconset>
           </property>
           <property name="checkable">
            <bool>true</bool>
