--- a/trunk/mscore/share/styles/appstyle-dark.css
+++ b/trunk/mscore/share/styles/appstyle-dark.css
@@ -1,8 +1,9 @@
 * {
       font-size: 10pt; font-family: "freeSans";
-      background: #525252;
+/*      background: #525252;
       alternate-background-color: #626262;
       color: white
+      */
       }
 *:disabled {
       color: gray
